--- a/PresenceDesktop/MainWindow.axaml
+++ b/PresenceDesktop/MainWindow.axaml
@@ -3,7 +3,38 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+		x:CompileBindings="False"
         x:Class="PresenceDesktop.MainWindow"
         Title="PresenceDesktop">
-    
+	<StackPanel>
+		<ComboBox Name="GroupsComboBox"
+				  SelectionChanged="GroupsComboBox_SelectionChanged">
+			<ComboBox.ItemTemplate>
+				<DataTemplate>
+					<TextBlock Text="{Binding Name}"/>
+				</DataTemplate>
+			</ComboBox.ItemTemplate>
+		</ComboBox>
+		<ComboBox Name="SortComboBox"
+				  SelectedIndex="0"
+				  SelectionChanged="SortComboBox_SelectionChanged">
+			<ComboBoxItem></ComboBoxItem>
+			<ComboBoxItem>По возрастанию</ComboBoxItem>
+			<ComboBoxItem>По убыванию</ComboBoxItem>
+		</ComboBox>
+		<TextBlock Name="count"/>
+		<ListBox Name="StudentsListBox">
+			<ListBox.ItemTemplate>
+				<DataTemplate>
+					<TextBlock Text="{Binding Name}">
+						<ContextMenu>
+							<MenuItem Header="Удалить"
+									  Click="MenuItem_Click"
+									  Tag="{Binding Guid}"/>
+						</ContextMenu>
+					</TextBlock>
+				</DataTemplate>
+			</ListBox.ItemTemplate>
+		</ListBox>
+	</StackPanel>
 </Window>
